examples-generated/namespaced/api/v1alpha1/gateway.yaml
apiVersion: api.yandex-cloud.upjet.m.crossplane.io/v1alpha1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: api/v1alpha1/gateway
  labels:
    testing.upbound.io/example-name: test-api-gateway
  name: test-api-gateway
  namespace: upbound-system
spec:
  forProvider:
    canary:
    - variables:
        installation: dev
      weight: 20
    connectivity:
    - networkId: <dynamic network id>
    customDomains:
    - certificateId: <certificate_id_from_cert_manager>
      fqdn: test.example.com
    description: any description
    executionTimeout: "300"
    labels:
      empty-label: ""
      label: label
    logOptions:
    - logGroupId: <log group id>
      minLevel: ERROR
    name: some_name
    spec: |
      openapi: "3.0.0"
      info:
        version: 1.0.0
        title: Test API
      x-yc-apigateway:
        variables:
          installation:
            default: "prod"
            enum:
             - "prod"
             - "dev"
      paths:
        /hello:
          get:
            summary: Say hello
            operationId: hello
            parameters:
              - name: user
                in: query
                description: User name to appear in greetings
                required: false
                schema:
                  type: string
                  default: 'world'
            responses:
              '200':
                description: Greeting
                content:
                  'text/plain':
                    schema:
                      type: "string"
            x-yc-apigateway-integration:
              type: dummy
              http_code: 200
              http_headers:
                'Content-Type': "text/plain"
              content:
                'text/plain': "Hello again, {user} from ${apigw.installation} release!\n"
    variables:
      installation: prod
